--- a/css/style.css
+++ b/css/style.css
@@ -229,4 +229,12 @@ aside ul{
     padding: 1rem;
   }
 
+h1{background:cyan;}
+@media (max-width:800px){
+#qrCodeImg{display:none;} /*hide QR
+code when its mobile size */
+h1{background: lightgreen;}
+h1::after{content:"(mobile)";}
+}
+
 }
