--- a/style.css
+++ b/style.css
@@ -333,7 +333,7 @@ th, td {
 .quiz-q {
     opacity: 0;
     pointer-events: none;
-    transition: opacity 0.7s;
+    transition: opacity 1.0s;
 }
 .quiz-q.visible {
     opacity: 1;
@@ -379,7 +379,6 @@ th, td {
     display: none !important;
 }
 
-/* --- Responsive styles for max-width: 800px --- */
 
 footer {
   position: fixed;
@@ -411,8 +410,22 @@ footer:hover{
     opacity: 0;
 }
 
+#qrcode-text {
+    display: block;
+    margin: 2em auto 0 auto;
+    opacity: 1;
+    transition: opacity 1s;
+}
+#startpage.fadeout #qrcode-text {
+    opacity: 0;
+}
+
+
 @media screen and (max-width:800px) {
     #qrcode {
+        display: none;
+    }
+    #qrcode-text {
         display: none;
     }
     header {
