--- a/style.css
+++ b/style.css
@@ -514,9 +514,11 @@ footer:hover{
     opacity: 1;
     color: white;
     background-color: black;
-    font-size: 4vw;
+    font-size: 2vw;
     height: auto;
     width: auto;
+    top: 50%;
+    left: 50%;
     border: none;
     margin: 0;
     transition: opacity 1s ease-out;
